<?xml version="1.0" encoding="utf-8"?>
<!--
   *    Copyright (C) 2014 The NamelessRom Project
   *
   *    This program is free software: you can redistribute it and/or modify
   *    it under the terms of the GNU General Public License as published by
   *    the Free Software Foundation, either version 3 of the License, or
   *    (at your option) any later version.
   *
   *    This program is distributed in the hope that it will be useful,
   *    but WITHOUT ANY WARRANTY; without even the implied warranty of
   *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   *    GNU General Public License for more details.
   *
   *    You should have received a copy of the GNU General Public License
   *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
    <string name="app_name">Screencast</string>
    <string name="start_description">Press \"%s\" to begin recording a video of your Android screen and microphone.</string>
    <string name="start_screencast">Start screencast</string>
    <string name="stop_description">Press \"%s\" to stop the recording of your Android screen and microphone.</string>
    <string name="stop">Stop</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="insufficient_storage">Insufficient storage</string>
    <string name="not_enough_storage">Not enough storage available</string>
    <string name="show_touches">Show touches</string>
    <string name="recording">Recording&#8230;</string>
    <string name="recording_ready_to_share">Recording ready to share</string>
    <string name="video_length">Video length: %s</string>

    <string name="configure">Configure</string>
    <string name="settings_information">Changes will take effect when starting a new screencast!</string>
    <string name="general">General</string>

    <string name="video">Video</string>
    <string name="bitrate">Bitrate</string>
    <string name="framerate">Framerate</string>

    <string name="audio">Audio</string>
    <string name="enable_audio">Enable audio</string>
    <string name="input_device">Input device</string>
    <string name="noise_suppression">Noise suppression</string>

    <string name="microphone">Microphone</string>
    <string name="device">Device</string>
</resources>
