<?xml version="1.0" encoding="utf-8"?>
<!--
   *    Copyright (C) 2014 The NamelessRom Project
   *
   *    This program is free software: you can redistribute it and/or modify
   *    it under the terms of the GNU General Public License as published by
   *    the Free Software Foundation, either version 3 of the License, or
   *    (at your option) any later version.
   *
   *    This program is distributed in the hope that it will be useful,
   *    but WITHOUT ANY WARRANTY; without even the implied warranty of
   *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   *    GNU General Public License for more details.
   *
   *    You should have received a copy of the GNU General Public License
   *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="info"
        android:summary="@string/settings_information"
        android:selectable="false" />

    <PreferenceCategory
        android:title="@string/general"
        android:key="general">

        <CheckBoxPreference
            android:key="show_touches"
            android:title="@string/show_touches"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="video"
        android:title="@string/video">

        <ListPreference
            android:key="bitrate"
            android:title="@string/bitrate"
            android:persistent="false" />

        <ListPreference
            android:key="framerate"
            android:title="@string/framerate"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
